--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 
 html,body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
 }
 
@@ -33,10 +33,10 @@ section#telefone{
     background:url('../imagens/frame-iphone.png') no-repeat;
 }
 iframe#tela{
-    position: relative;
+    position:relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 section#redes-sociais{
